--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.
       </p>
-      <a class="btn" href="">Learn More</a>
+      <a class="btn" href="#">Learn More</a>
     </div>
 
     <div class="card second">
@@ -35,7 +35,7 @@
         Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.
       </p>
-      <a class="btn" href="http://">Learn More</a>
+      <a class="btn" href="#">Learn More</a>
     </div>
 
     <div class="card third">
@@ -47,7 +47,7 @@
         Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.
       </p>
-      <a class="btn" href="http://">Learn More</a>
+      <a class="btn" href="#">Learn More</a>
     </div>
   </main>
   <div class="attribution">
